--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -146,7 +146,7 @@
         <a href="/paginas-web/" class="hover:opacity-50 cursor-pointer">Páginas Web</a>
       </li>
       <li class="relative group px-3 py-2">
-        <a href="https://panel.servistream.net/order/shop?catid=1280d163-9e23-7d43-e78b-64610589e572" class="hover:opacity-50 cursor-pointer">Dominios</a>
+        <a href="https://clientes.servistream.net/cart.php?a=add&domain=register" class="hover:opacity-50 cursor-pointer">Dominios</a>
       </li>
       <li class="relative group px-3 py-2">
         <a href="/contacto/" class="hover:opacity-50 cursor-pointer">Contacto</a>
@@ -157,7 +157,7 @@
     <ul>
       <li>
         <a
-          href="https://panel.servistream.net/login"
+          href="https://clientes.servistream.net/index.php?rp=/login"
           class="rounded-lg px-3 py-2 font-semibold bg-white bg-opacity-10 flex items-center group"
         >
           <span class="mr-2">INICIAR SESIÓN</span>
