--- a/src/components/MobilMenu.astro
+++ b/src/components/MobilMenu.astro
@@ -71,7 +71,7 @@
                 </li>
 
                 <li class="dropdown__list">
-                    <a href="https://panel.servistream.net/" class="dropdown__link">
+                    <a href="https://clientes.servistream.net/index.php?rp=/login" class="dropdown__link">
                         <span class="dropdown__span font-semibold">Iniciar Sesión</span>
                     </a>
                 </li>
