--- a/src/components/Top.astro
+++ b/src/components/Top.astro
@@ -1,6 +1,6 @@
 <section class="pl-2 pr-2 hidden lg:block">
     <div class="flex contenedor mx-auto justify-between">
-        <a href="https://panel.servistream.net/order/product?pid=6d530876-8251-d481-3eef-847e390921e6" class="flex h-10 items-center">
+        <a href="https://clientes.servistream.net/index.php?rp=/store/web-hosting-linux/deluxe-plan" class="flex h-10 items-center">
             <svg
                 xmlns="http://www.w3.org/2000/svg"
                 class="icon icon-tabler icon-tabler-bookmarks-filled"
