--- a/src/pages/hosting-cloud.astro
+++ b/src/pages/hosting-cloud.astro
@@ -128,7 +128,7 @@ import BotonDos from "../components/BotonDos.astro";
                 title="Starter"
                 descuento="Descuento por más de 2 años"
                 precio="$4.99"
-                link="https://panel.servistream.net/order/product?pid=93e8d569-d072-4518-696c-d4e853121607"
+                link="https://clientes.servistream.net/index.php?rp=/store/web-hosting-cloud/starter-plan"
                 des1="100 GB"
                 des3="1"
                 des6="10"
@@ -140,7 +140,7 @@ import BotonDos from "../components/BotonDos.astro";
                 title="Business"
                 descuento="Descuento por más de 2 años"
                 precio="$6.99"
-                link="https://panel.servistream.net/order/product?pid=5983e230-6e75-4013-091a-14981d210d76"
+                link="https://clientes.servistream.net/index.php?rp=/store/web-hosting-cloud/business-plan"
                 des1="200 GB"
                 des3="10"
                 des6="20"
@@ -152,7 +152,7 @@ import BotonDos from "../components/BotonDos.astro";
                 title="Corporate"
                 descuento="Descuento por más de 2 años"
                 precio="$8.25"
-                link="https://panel.servistream.net/order/product?pid=7831d635-0d82-497d-053c-849e176259e0"
+                link="https://clientes.servistream.net/index.php?rp=/store/web-hosting-cloud/corporate-plan"
                 des1="Ilimitado GB"
                 des3="20"
                 des6="30"
